# Lur-Slint

./: Cargo.toml  README.md
src/: builder.rs  main.rs
ui/: generated.slint
